Fix width overflow caused by width set on login section

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,6 @@ the logo background div */
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
     justify-content: center;
 }
 
@@ -124,7 +123,6 @@ input :focus {
     flex-direction: column;
     gap: 25px;
     padding: 20px;
-    width: 100%;
 }
 
 #login-butt {
